# IDEA_v1

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_V2.md  FAILURE_REPORT.md  ROUTING_CLAUDE.md  RSF_V2_HANDOFF.md  UI_CLAUDE.md  docker-compose.test.yml  docker-compose.yml  gate3-report.json  gate4-report.json  gate5-report.json  migration-gate-m0-report.json  migration-gate-m1-report.json  migration-gate-m2-report.json  migration-gate-m3-report.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  spec-integrity-report.json  tsconfig.base.json
.claude/: settings.local.json
apps/desktop/: BUILD.md  README.md  ROADMAP.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
constitution/: configurable-principles.md  locked-principles.md  modification-log.md
db/migrations/: V1__initial_schema.sql  V2__data_flywheel_columns.sql  V3__v2_capabilities_tables.sql  V4__pareto_tracking_columns.sql  (+1 more)
research/: SPN_Scrutiny_Report.md  living_platform.md
scripts/: e2e-smoke-test.ts  gate1-env-audit.sh  gate2-deps-resolve.sh  gate3-infra-health.sh  gate4-contract-tests.sh  gate5-phase-validate.sh  migration-gate-m0.sh  migration-gate-m1.sh  migration-gate-m2.sh  migration-gate-m3.sh  rsf-commit.sh  spec-integrity-check.sh  ui-gate1-toolchain-audit.sh  ui-gate2-deps-resolve.sh  ui-gate3-api-connectivity.sh  ui-gate4-component-contracts.sh  ui-gate5-phase-validate.sh  v2-e2e-smoke-test.ts
(+138 files in other folders)
