[package]
name = "rsf-desktop"
version = "1.0.0"
description = "Recursive Software Foundry — Desktop UI"
edition = "2021"

[lib]
name = "rsf_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
